@@ -59,8 +59,9 @@
 -Fixed server crashing when trying to start playback with player name longer than 16 characters (thanks to SPY for reporting).
 -Fixed fake players with empty name having tiny gray bar above their head.
 -Fixed blocks not initializing for playback of currently recorded recording (thanks to Robobuilder for reporting).
--Fixed "recordPlayerDeath" setting not working (by removing it) (thanks to damiendier).
--Fixed recording not stopping after recorded player leaves the server (thanks to damiendier).
+-Fixed "recordPlayerDeath" setting not working (by removing it) (thanks to damiendier for reporting).
+-Fixed recording not stopping after recorded player leaves the server (thanks to damiendier for reporting).
+-Fixed playback of a spectator being only invisible instead of actually being a spectator (thanks to damiendier for reporting).
 -Minor spelling improvements.
 -Minor improvements to error detection.
 -Added Chinese [traditional] translation (thanks to dirtTW).
